# template-python-project

./: .flake8  CHANGELOG.md  Dockerfile  README.md  cookiecutter.json  devspace.yaml  devspace_start.sh  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
hooks/: post_gen_project.py
src/template_python_project/: __init__.py  main.py
tests/: __init__.py  test_cookecutter_template.py  test_cookiecutter_template.py  test_init.py  test_main.py
{{cookiecutter.hyphenated}}/: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  catalog-info.yaml  devspace.yaml  devspace_start.sh  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.hyphenated}}/.github/workflows/: ci.yaml
{{cookiecutter.hyphenated}}/docs/: index.md
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/: __init__.py  config.py  dependencies.py  main.py
{{cookiecutter.hyphenated}}/src/{{cookiecutter.underscored}}/routers/: health.py  items.py  users.py
{{cookiecutter.hyphenated}}/tests/: __init__.py  conftest.py  test_health.py  test_init.py  test_items.py  test_main.py  test_users.py  utils.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  devspace.yaml  devspace_start.sh  mkdocs.yml  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
