[tool.poetry]
authors = [
  "Dmitri Gvozdev <gvod@bank-banque-canada.ca>",
  "Marcelo Katayama <katm@bank-banque-canada.ca>",
  "Peter Lam Quach <qutp@bank-banque-canada.ca>",
  "Steven Lougheed <lous@bank-banque-canada.ca>",
  "Lucas Melin <mell@bank-banque-canada.ca>",
]
description = "A starter project template for new python projects."
name = "template-python-project"
version = "0.1.0"

[tool.poetry.dependencies]
cookiecutter = "^1.7.3"
pytest = "^6.2.5"
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
