[tool.poetry]
version = "0.1.0"
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
description = "Top-level package for {{ cookiecutter.project_name }}."
name = "{{cookiecutter.hyphenated}}"
readme = "README.md"
version = "{{ cookiecutter.version }}"
{% if cookiecutter.project_type == 'FastAPI application' %}
[tool.poetry.scripts]
dev = "{{cookiecutter.underscored}}.main:dev_start"
{% endif %}
[tool.poetry.dependencies]
python = "^3.6"
{% if cookiecutter.project_type == 'FastAPI application' %} fastapi = "^0.65.2"
uvicorn = "^0.14.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
loguru = "^0.5.3"
{% endif %}
[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.4.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
nox = "^2020.12.31"
pep8-naming = "^0.11.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
rope = "^0.19.0"
safety = "^1.10.3"
xdoctest = "^0.15.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
