[tool.poetry]
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
description = "Top-level package for {{ cookiecutter.project_name }}."
name = "{{cookiecutter.hyphenated}}"
readme = "README.md"
version = "{{ cookiecutter.version }}"
{% if cookiecutter.project_type == 'FastAPI application' %}
[tool.poetry.scripts]
dev = "{{cookiecutter.underscored}}.main:dev_start"
{% endif %}
[tool.poetry.dependencies]
python = "^3.7"
{% if cookiecutter.project_type == 'FastAPI application' %}fastapi = "^0.75.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
loguru = "^0.6.0"
{% endif %}
[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.3.2"}
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.1.11"
flake8-comprehensions = "^3.8.0"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
mkdocs-material = "^8.2.5"
mkdocstrings = "^0.18.1"
nox = "^2022.1.7"
pep8-naming = "^0.12.1"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
{% if cookiecutter.project_type == 'FastAPI application' %}requests = "^2.27.1"{% endif %}
rope = "^0.23.0"
safety = "^1.10.3"
xdoctest = "^0.15.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 60
show_missing = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
